--- a/todo_FE/index.html
+++ b/todo_FE/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JJs</title>
+    <link rel="stylesheet" href="/css/common.css">
+    <script src="/js/header.js"></script>
 </head>
 
 <body>
@@ -16,6 +18,12 @@
     -->
     <header>
         <h1>JJ</h1>
+        <nav>
+            <ul>
+                <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
+                <li><a href="" onclick="boardHJBind()">BoardHJ</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section></section>
@@ -24,7 +32,11 @@
     <!-- 
         Footer: 공통 영역
      -->
-    <footer></footer>
+    <footer>
+        <div>
+            Footer K
+        </div>
+    </footer>
 </body>
 
 </html>
