[수정] Header 디자인 수정

--- a/todo_FE/index.html
+++ b/todo_FE/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JJs</title>
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/header.css">
     <script src="/js/header.js"></script>
 </head>
 
@@ -16,8 +17,8 @@
         메인 배너 / 로그인, 로그아웃 등
         추 후 컴포넌트화 예정이며 기능도 추가하자!
     -->
-    <header>
-        <h1>JJ</h1>
+    <header class="main-header">
+        <a href="/index.html" id="main-logo">YJHJ</a>
         <nav>
             <ul>
                 <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
