--- a/todo_FE/board/HJ_Board.html
+++ b/todo_FE/board/HJ_Board.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JJs</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
-    <script src="/js/header.js"></script>
 </head>
-
 <body>
-    <!-- 
-        Header: 공통 영역
-        메인 배너 / 로그인, 로그아웃 등
-        추 후 컴포넌트화 예정이며 기능도 추가하자!
-    -->
     <header class="main-header">
         <a href="/index.html" id="main-logo">YJHJ</a>
         <nav>
             <ul>
                 <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
-                <li><a href="/board/HJ_Board.html">BoardHJ</a></li>
+                <li><a href="" onclick="boardHJBind()">BoardHJ</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <h2>HJ Board</h2>
         <section></section>
     </main>
-
-    <!-- 
-        Footer: 공통 영역
-     -->
     <footer>
         <div>
             Footer K
         </div>
     </footer>
 </body>
-
 </html>
