[수정] HJ 게시판 컨셉 - TIL

--- a/todo_FE/index.html
+++ b/todo_FE/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
-                <li><a href="/board/HJ_Board.html">BoardHJ</a></li>
+                <li><a href="/board/HJ_Board.html">BoardHJ-TIL</a></li>
             </ul>
         </nav>
     </header>
