--- a/todo_FE/board/HJ_Board.html
+++ b/todo_FE/board/HJ_Board.html
@@ -20,7 +20,14 @@
     </header>
     <main>
         <h2>HJ Board</h2>
-        <section></section>
+        <!-- list를 Grid 형식으로 만들어볼까 고민 중 -->
+        <section>
+            <ul>
+                <li>하이</li>
+                <li>루</li>
+                <li>요</li>
+            </ul>
+        </section>
     </main>
     <footer>
         <div>
