--- a/todo_FE/index.html
+++ b/todo_FE/index.html
@@ -34,32 +34,33 @@
       </nav>
     </header>
     <main>
-      <section>
-        <!-- todo input box 
+      <form action="">
+        <section>
+          <!-- todo input box 
           
           -->
-        <h2>TODO-LIST!</h2>
-        <label for="todoGo">TO-DO!</label>
-        <input type="text" id="todoGo" name="todoGo" placeholder="what?" />
-        <button onclick="todoPlus()">추가</button>
-      </section>
-      <section>
-        <!-- <div></div>   입력된 todo의 List -->
-        <ul>
-          <li>
-            텍스트로 임시 글씨 띄워놓음
-            <button onclick="todoUpdate()">수정</button>
-            <button onclick="todoDelite()">삭제</button>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <!-- 
+          <h2>TODO-LIST!</h2>
+          <label for="todoGo">TO-DO!</label>
+          <div>
+            <input type="text" id="todoGo" name="todoGo" placeholder="what?" />
+            <button onclick="todoPlus()">추가</button>
+          </div>
+        </section>
+        <section>
+          <!-- <div></div>   입력된 todo의 List -->
+          <ul>
+            <li>텍스트로 임시 글씨 띄워놓음</li>
+          </ul>
+          <button onclick="todoUpdate()">수정</button>
+          <button onclick="todoDelite()">삭제</button>
+        </section>
+      </form>
+      <!-- 
         Footer: 공통 영역
      -->
-    <footer>
-      <div>Footer K</div>
-    </footer>
+      <footer>
+        <div>Footer K</div>
+      </footer>
+    </main>
   </body>
 </html>
