--- a/todo_FE/board/HJ_Board.html
+++ b/todo_FE/board/HJ_Board.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/board_til.css">
 </head>
 <body>
     <header class="main-header">
@@ -21,12 +22,56 @@
     <main>
         <h2>HJ Board</h2>
         <!-- list를 Grid 형식으로 만들어볼까 고민 중 -->
+        <!-- 글 목록 -->
+        <section class="hjBoard-list">
+            <table>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+            </table>
+        </section>
+        <!-- 글 내용 -->
         <section>
-            <ul>
-                <li>하이</li>
-                <li>루</li>
-                <li>요</li>
-            </ul>
+            <table>
+                <tr>
+                    <td>안녕하세요</td>
+                </tr>
+                <tr>
+                    <td>안녕하세요하이하이</td>
+                </tr>
+            </table>
+        </section>
+        <!-- 글 목록 -->
+        <section class="hjBoard-list">
+            <table>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>안녕하세요</td>
+                    <td>2022-06-14</td>
+                </tr>
+            </table>
         </section>
     </main>
     <footer>
